--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   BODY
 ****************************************************-->
 <body>
-  <script src="pinkEggSimulator.js" </script>
+  <script src="pinkEggSimulator.js"></script> 
 
 
 </body>
